# wavebreaker-rs

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  diesel.toml  docker-compose.yml  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-container-image.yml  rust.yml
entity/src/: player.rs
entity/src/entities/: mod.rs  player.rs  prelude.rs  rivalry.rs  score.rs  shout.rs  song.rs
migration/src/: m20220101_000001_init.rs
migrations/: 20231208214130_init.sql
migrations/2023-12-17-211850_init/: down.sql  up.sql
migrations/2023-12-26-114101_add_songs/: down.sql  up.sql
migrations/2023-12-27-204521_add_scores/: down.sql  up.sql
migrations/2024-01-25-172327_add_shouts/: down.sql  up.sql
migrations/2024-01-26-183015_add_song_modifiers/: down.sql  up.sql
migrations/2024-02-04-190031_add_ext_song_metadata/: down.sql  up.sql
migrations/2024-02-04-193737_update_songs_unique/: down.sql  up.sql
migrations/2024-08-18-002310_use_timestamptz/: down.sql  up.sql
migrations/2025-03-15-202709_fix_default_user_role/: down.sql  up.sql
migrations/2026-01-04-114817-0000_song_info_update_time/: down.sql  up.sql
migrations/2026-01-20-193731-0000_user_updated_at/: down.sql  up.sql
prisma/: schema.prisma
prisma-cli/: Cargo.toml
src/: error.rs  main.rs  models.rs  schema.patch  schema.rs
src/api/: auth.rs  mod.rs  players.rs  rivals.rs  scores.rs  shouts.rs  songs.rs
src/game/: auth.rs  gameplay.rs  helpers.rs  misc.rs  mod.rs  radio.rs  service.rs  user.rs
src/manager/: mod.rs
src/models/: extra_song_info.rs  mod.rs  players.rs  rivalries.rs  scores.rs  shouts.rs  songs.rs
src/util/: errors.rs  game_types.rs  jwt.rs  meilisearch.rs  mod.rs  modifiers.rs  musicbrainz.rs  query.rs  radio.rs  session.rs  session_store.rs  steam.rs  steam_openid.rs  validator.rs  xml.rs
