[package]
name = "wavebreaker"
authors = ["m1nt_ (Rubber Duck Shobe)"]
description = "A custom, open-source server for Audiosurf 1"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/AudiosurfResearch/wavebreaker-rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
axum = { version = "0.8.1", features = ["macros", "tracing"] }
# TEMPORARY, until this is merged https://github.com/gengteng/axum-serde/pull/3
axum-serde = { version = "0.8.1", features = ["xml", "xml_encoding"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
num_enum = "0.7.3"
quick-xml = { version = "0.37.2", features = ["serialize"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
tokio = "1.44.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
diesel = { version = "2.2.8", features = ["time"] }
diesel-async = { version = "0.5.2", features = ["postgres", "deadpool", "async-connection-wrapper"] }
steam-rs = "0.5.1"
steam-openid = "0.2.0"
time = { version = "0.3.39", features = ["formatting", "serde"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
toml = "0.8.20"
validator = { version = "0.20.0", features = ["derive"] }
axum-extra = { version = "0.10.0", features = ["form", "typed-header"] }
regex = "1.11.1"
musicbrainz_rs = "0.9.0"
clap = { version = "4.5.31", features = ["derive"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
tracing-appender = "0.2.3"
url = "2.5.4"
serde_urlencoded = "0.7.1"
reqwest = "0.12.12"
fred = { version = "10.1.0", features = ["i-sorted-sets", "serde-json"] }
rmp-serde = "1.3.0"
thiserror = "2.0.12"
utoipa = { version = "5.3.1", features = ["axum_extras", "non_strict_integers", "repr", "time"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
serde-inline-default = "0.2.3"
serde_with = "3.12.0"
opentelemetry = "0.28.0"
tracing-opentelemetry = "0.29.0"
opentelemetry-otlp = { version = "0.28.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio"] }
rand = "0.9.0"
